LPS-46696 - Prevent unintentional portlet dragging on mobile devices

--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom.css
@@ -1,3 +1,5 @@
+@import "aui/alloy-font-awesome/scss/mixins-alloy";
+@import "aui/alloy-font-awesome/scss/variables";
 @import "compass";
 @import "mixins";
 
@@ -456,6 +458,27 @@ $dockbarOpenGradientStart: #0EA6F9;
 		border-top-width: 0;
 		padding: 12px 10px 10px;
 	}
+
+	&.touch .portlet-draggable .portlet-title {
+		&:before {
+			content: $move;
+
+			@include icon-FontAwesome();
+		}
+
+		.portlet-title-text {
+			padding-left: 5px;
+		}
+
+		.portlet-touch-drag-handle {
+			height: 30px;
+			left: 0;
+			position: absolute;
+			top: 0;
+			width: 25px;
+		}
+	}
+
 
 	.portlet-topper {
 		background: #D3D3D3;
